--- a/animalstars.html
+++ b/animalstars.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Animalbase</title>
-    <link rel="stylesheet" href="animalbase.css" />
+    <link rel="stylesheet" href="animalstars.css" />
   </head>
+
   <body>
     <h1>Animals</h1>
     <p>
@@ -42,6 +43,9 @@
     <table id="list">
       <thead>
         <tr id="sorting">
+          <th data-action="sort" data-sort-direction="asc" data-sort="star">
+            Star
+          </th>
           <th data-action="sort" data-sort-direction="asc" data-sort="name">
             Name
           </th>
@@ -63,6 +67,7 @@
 
     <template id="animal">
       <tr>
+        <td data-field="star">☆</td>
         <td data-field="name">NAME</td>
         <td data-field="type">TYPE</td>
         <td data-field="desc">DESCRIPTION</td>
@@ -70,6 +75,6 @@
       </tr>
     </template>
 
-    <script src="animalbase.js"></script>
+    <script src="animalstars.js"></script>
   </body>
 </html>
