--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Animalbase</title>
-    <link rel="stylesheet" href="animalstars.css" />
+    <link rel="stylesheet" href="animalwinners.css" />
   </head>
 
   <body>
@@ -75,6 +75,6 @@
       </tr>
     </template>
 
-    <script src="animalstars.js"></script>
+    <script src="animalwinners.js"></script>
   </body>
 </html>
