--- a/index.html
+++ b/index.html
@@ -79,6 +79,30 @@
       </tr>
     </template>
 
+    <div id="removeother" class="modal hide">
+<div class="dialog">
+  <button class="closebutton">X</button>
+  <h1>Warning!</h1>
+  <p>There can be only one winner of each type <br>
+  do you want to remove the other winner? </p>
+  <button id="removeother_button">remove the otther</button>
+  </p>
+  </div>
+</div>
+
+
+<div id="removeaorb" class="modal hide">
+<div class="dialog">
+  <button class="closebutton">X</button>
+  <h1>Warning!</h1>
+  <p>There can only be two winners <br>
+  do you want to remove one of the existing winners? </p>
+  <button id="removea_button">remove a</button>
+   <button id="removeb_button">remove b</button>
+  </p>
+</div>
+</div>
+
     <script src="animalwinners.js"></script>
   </body>
 </html>
