button text changed

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <h1>Warning!</h1>
   <p>There can be only one winner of each type <br>
   do you want to remove the other winner? </p>
-  <button id="removeother_button">remove the otther</button>
+  <button id="removeother_button">remove <span data-field="otherwinner">other</span></button>
   </p>
   </div>
 </div>
@@ -97,8 +97,8 @@
   <h1>Warning!</h1>
   <p>There can only be two winners <br>
   do you want to remove one of the existing winners? </p>
-  <button id="removea_button">remove a</button>
-   <button id="removeb_button">remove b</button>
+  <button id="removea_button">remove <span data-field="winnerA">A</span></button>
+   <button id="removeb_button">remove <span data-field="winnerB">B</span></button>
   </p>
 </div>
 </div>
